fix code white space

--- a/app/src/assets/style/base.css
+++ b/app/src/assets/style/base.css
@@ -96,6 +96,10 @@ button:focus-visible {
   margin: 0 !important;
 }
 
+.default-theme pre code .code-block {
+  white-space: break-spaces !important;
+}
+
 @media (prefers-color-scheme: light) {
 
 }
